# boot-python

./: .gitignore  DEVELOPER_GUIDE.md  Makefile  README.md  create.py  plugin.toml  pyproject.toml
boot_python/: __init__.py  main.py  server.py
boot_python/prompts/: README.md.template  base_instructions.txt
prompts/: language_rules.txt  review_instructions.txt
scripts/: concat_files.py
src/: main.py  server.py
src/boot_python/: main.py  server.py
tests/: test_main.py  test_server.py
